# horong-horong

./: .gitignore  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.en.md  README.md  USER_GUIDE.md  project.yml
Agents/news_report/: ontology.py  pyproject.toml  runner.py
Agents/news_report/config/: interests.json  sources.json
Agents/news_report/connectors/: README.md  __init__.py  _text.py  collector.py  google_connector.py  linkedin_connector.py  protocols.py  registry.py  youtube_connector.py  yozm_connector.py
Agents/news_report/contracts/: README.md  __init__.py  news_job_request.py  request_loader.py  research_artifact.py
Agents/news_report/evals/: README.md  __init__.py  compare_provider_metrics.py  research_run_metrics.py
Agents/news_report/exporters/: README.md  __init__.py  meta_exporter.py  report_exporter.py  result_exporter.py
Agents/news_report/ontology/: README.md  __init__.py  builder.py  classifier.py  helpers.py  models.py  prompts.py  service.py  store.py
Agents/news_report/patterns/: README.md  __init__.py  context.py  protocols.py  registry.py  result.py
Agents/news_report/providers/: README.md  __init__.py  antigravity_cli.py  base_provider.py  claude_cli.py  cli_providers.py  codex_cli.py  factory.py  gemini_cli.py  ollama_provider.py  opencode_cli.py  protocols.py  traced_provider.py
Agents/news_report/renderers/: README.md  __init__.py  markdown.py
Agents/news_report/stages/: README.md  __init__.py  classify.py  normalize.py  ranking.py  relevance.py  summarize.py  (+3 more)
(+254 files in other folders)
