[project]
name = "horonghorong-news-report"
version = "0.1.0"
description = "HorongHorong news curation pipeline"
requires-python = ">=3.9"
dependencies = [
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2024.1.1",
    "feedparser>=6.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.0.0",
]
